--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source=datingapp.db"
+  },
+  "TokenKey":"Super secret token key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
